# bulletin-board-system

./: .gitignore  README.md
bulletin-board-system-backend/: .env.example  .gitignore  pyproject.toml
bulletin-board-system-backend/board/: admin.py  custom_permissions.py  models.py  serializers.py  urls.py  views.py
bulletin-board-system-backend/board/migrations/: 0001_initial.py  0002_user_is_moderator.py  0003_board_description.py
bulletin-board-system-backend/bulletin_board/: settings.py  urls.py
bulletin-board-system-frontend/: .env.example  package-lock.json  package.json  tsconfig.json
bulletin-board-system-frontend/src/: App.css  App.tsx  api.ts  utils.ts
bulletin-board-system-frontend/src/components/: AddBoard.tsx  AddPost.tsx  AddThread.tsx  AddTopic.tsx  BoardDetails.tsx  Home.tsx  Login.tsx  Nav.tsx  Profile.tsx  Register.tsx  ReplyForm.tsx  SingleBoard.tsx  SinglePost.tsx  SingleTopic.tsx  ThreadDetails.tsx
bulletin-board-system-frontend/src/interfaces/: Interfaces.ts
bulletin-board-system-frontend/src/stores/: BoardStore.ts  PostStore.ts  RootStore.ts  ThreadStore.ts  TopicsStore.ts  UserStore.ts
